# libwheel

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  conanfile.txt  dependencies.cmake  options.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  continuous_integration.yaml  unit_tests.yaml
angle/: CMakeLists.txt  README.md  options.cmake
angle/cmake/: libwheel_angleConfig.cmake
angle/libwheel/angle/: CMakeLists.txt
angle/test/: CMakeLists.txt
boost_graph_extensions/: CMakeLists.txt  README.md  options.cmake
boost_graph_extensions/cmake/: libwheel_boost_graph_extensionsConfig.cmake
boost_graph_extensions/libwheel/boost_graph_extensions/: CMakeLists.txt  concepts.hpp  exceptions.hpp  type_traits.hpp  visitors.hpp
boost_graph_extensions/test/: CMakeLists.txt  test_visitors.cpp
cmake/: compiler_warnings.cmake  get_cpm.cmake  libwheel_add_to_build.cmake  libwheel_conditionally_add_to_build.cmake  libwheel_motion_planningConfig.cmake  libwheel_target_remove_export_name_prefix.cmake  libwheel_target_remove_library_prefix.cmake  libwheel_target_set_compiler_warnings.cmake  libwheel_target_set_install_rules.cmake
docs/: index.rst
examples/: CMakeLists.txt  custom_space.cpp  rrt.cpp
examples/custom_vector_type/: strongly_typed_vector.cpp  struct_vector.cpp
examples/motion_planning/: rrt.cpp
examples/motion_planning/custom_vector_type/: eigen_vector.cpp  strongly_typed_vector.cpp
geometry/: CMakeLists.txt  README.md  options.cmake
geometry/cmake/: libwheel_geometryConfig.cmake
geometry/geometry/: CMakeLists.txt  linear_equation.hpp
geometry/libwheel/geometry/: CMakeLists.txt  half_plane.hpp  line.hpp  point_2d.hpp  polygon.hpp  tagged_value.hpp
geometry/test/: CMakeLists.txt  test_half_plane.cpp  test_polygon.cpp
libwheel/angle/: CMakeLists.txt  angle.hpp
libwheel/geometry/: line.hpp
libwheel/metaprogramming/: CMakeLists.txt  README.md  has_value_member.hpp  invocable_lambda.hpp  is_compile_time_invocable_lambda.hpp  type_list.hpp
libwheel/motion_planning/: CMakeLists.txt  bound_range.hpp  default_buffer_type.hpp  r2_space.hpp  rapidly_exploring_random_trees.hpp  sampler.hpp  sampler_base.hpp  space.hpp  tagged_value.hpp  uniform_sampler.hpp  utils.hpp  vector.hpp
libwheel/strongly_typed_matrix/: strongly_typed_matrix.hpp
metaprogramming/: CMakeLists.txt  README.md  options.cmake
metaprogramming/libwheel/metaprogramming/: CMakeLists.txt  is_compile_time_invocable_lambda.hpp
metaprogramming/metaprogramming/: has_type_member.hpp  type_list.hpp
metaprogramming/test/: test_is_compile_time_invocable_lambda.cpp
motion_planning/: CMakeLists.txt  README.md  options.cmake
motion_planning/examples/: CMakeLists.txt  rapidly_exploring_random_trees.cpp  rrt.cpp  rrt_max_distance.cpp  rrt_max_distance_holes.cpp  rrt_simple.cpp
motion_planning/examples/custom_vector_type/: CMakeLists.txt  eigen_vector.cpp  strongly_typed_vector.cpp  struct_vector.cpp
motion_planning/libwheel/motion_planning/: CMakeLists.txt  attempt_count.hpp  bound_range.hpp  dimensional_bound.hpp  find_path.hpp  is_within.hpp  iteration_count.hpp  local_planning.hpp  make_vector.hpp  orthotope.hpp  param_types.hpp  rapidly_exploring_random_trees.hpp  sampling.hpp  space.hpp  type_traits.hpp  vertex_selection.hpp
motion_planning/libwheel/motion_planning/detail/: boost_graph_extensions.hpp  find_stopping_point.hpp  interpolate_between.hpp
motion_planning/motion_planning/: README.md  buffer_type_dispatcher.hpp  copy_buffer_data_strategy.hpp  rapidly_exploring_random_trees.hpp  resize_strategy.hpp
motion_planning/test/: CMakeLists.txt  test_make_vector.cpp  test_orthotope.cpp  test_space.cpp  test_type_traits.cpp
scripts/: build.sh
strongly_typed_matrix/: CMakeLists.txt  README.md  options.cmake
strongly_typed_matrix/docs/: CMakeLists.txt  Doxyfile.in  conf.py  requirements.txt
strongly_typed_matrix/libwheel/strongly_typed_matrix/: CMakeLists.txt  index_types.hpp  strongly_typed_coefficient.hpp  strongly_typed_matrix.hpp
strongly_typed_matrix/strongly_typed_matrix/: CMakeLists.txt
strongly_typed_matrix/test/: CMakeLists.txt  test_strongly_typed_coefficient.cpp  test_strongly_typed_matrix.cpp
test/: CMakeLists.txt  test_angle.cpp  test_invocable_lambda.cpp  test_is_compile_time_invocable_lambda.cpp  test_linear_equation.cpp  test_space.cpp  test_strongly_typed_matrix.cpp  test_type_list.cpp  test_vector.cpp
test/geometry/: test_line.cpp
test/metaprogramming/: CMakeLists.txt  test_has_type_member.cpp  test_has_value_member.cpp  test_type_list.cpp
